--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "whatsapp-baileys-server",
   "version": "2.0.0",
   "type": "module",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.9",
     "@supabase/supabase-js": "^2.45.0",
+    "@hapi/boom": "^10.0.1",
     "express": "^4.19.2",
     "pino": "^8.21.0",
     "qrcode-terminal": "^0.12.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
