--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.9",
