--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "whatsapp-baileys-server",
-  "version": "2.0.0",
+  "name": "whatsapp-baileys-multi-tenant",
+  "version": "1.0.0",
   "type": "module",
+  "description": "WhatsApp Baileys server with multi-tenant support",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "@whiskeysockets/baileys": "^6.7.9",
-    "@supabase/supabase-js": "^2.45.0",
-    "@hapi/boom": "^10.0.1",
-    "express": "^4.19.2",
-    "pino": "^8.21.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "node-cache": "^5.1.2",
+    "pino": "^9.7.0",
     "qrcode-terminal": "^0.12.0"
   },
   "engines": {
