--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "whatsapp-baileys-multi-tenant",
   "version": "1.0.0",
-  "type": "module",
-  "description": "WhatsApp Baileys server with multi-tenant support",
+  "description": "Servidor WhatsApp Web com Baileys - Multi-tenant",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "dev": "node --watch src/index.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.76.1",
-    "@whiskeysockets/baileys": "^6.7.9",
+    "@whiskeysockets/baileys": "^6.7.8",
+    "@supabase/supabase-js": "^2.45.0",
+    "express": "^4.18.2",
+    "qrcode": "^1.5.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "node-cache": "^5.1.2",
-    "pino": "^9.7.0",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "engines": {
-    "node": ">=20.0.0"
+    "pino": "^8.16.2"
   }
 }
