--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "description": "Servidor WhatsApp Baileys Multi-tenant",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.9",
     "@supabase/supabase-js": "^2.49.2",
     "express": "^4.21.2",
     "qrcode-terminal": "^0.12.0",
-    "pino": "^9.5.0"
+    "pino": "^9.5.0",
+    "cors": "^2.8.5"
   }
 }
