--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.9",
     "@supabase/supabase-js": "^2.49.2",
+    "@hapi/boom": "^10.0.1",
     "express": "^4.21.2",
     "qrcode-terminal": "^0.12.0",
     "pino": "^9.5.0",
